--------------------------------------------------------------------------------
drkns 2023-12-23 13:59:59+00:00 - build 6234

1. Fix RGB color processing.

--------------------------------------------------------------------------------
shmuel 2023-12-23 13:44:26+02:00 - build 6233

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-23 00:21:23+00:00 - build 6232

1. More ranges.

2. More concepts.

3. More spans.

4. Warnings.

--------------------------------------------------------------------------------
drkns 2023-12-21 22:12:53+00:00 - build 6231

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-21 07:23:40+00:00 - build 6230

1. Correction of 6229.

--------------------------------------------------------------------------------
drkns 2023-12-21 00:38:58+00:00 - build 6229

1. Remove old workarounds.

2. More tests.

3. More ranges.

--------------------------------------------------------------------------------
mishasychev 2023-12-20 10:55:32+03:00 - build 6228

1. Replace `std::optional` with `std::variant` in lazy.hpp.

--------------------------------------------------------------------------------
drkns 2023-12-16 16:35:29+00:00 - build 6227

1. Fix deadlock after an external std::exit() call.

2. Clarify calling plugins by prefix
   - Do not pass the command to the OS if the user cancelled the operation.
   - Do not send FE_CLOSE until we get a new panel.

3. Fix calling FCTL_GETPANELINFO from ClosePanelW.

4. Minor fixes & remove old workarounds.

--------------------------------------------------------------------------------
drkns 2023-12-13 22:11:00+00:00 - build 6226

1. More ranges.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-09 20:35:47+00:00 - build 6225

1. More ranges (less trivial cases).
