@@ -13287,33 +13287,19 @@ upd:"Unknown"
 "Ня вызначана"
 upd:"Unknown"
 
-MInfoPowerStatusBCLifePercent
-"Заряд батареи"
-"Battery life percent"
-"Stav baterie v procentech"
-"Status der Batteriedauer"
-upd:"Battery life percent"
-"Procent naładowania baterii"
-"Porcentaje carga de batería"
-"Stav akumulátora v percentách"
-"Percentuale Batterie"
-"Заряд батареї"
-"Зарад батарэи"
-upd:"Battery life percent"
-
 MInfoPowerStatusBCLifePercentUnknown
-"Не определено"
-"Unknown"
-"Neznámý"
-"Unbekannt"
-upd:"Unknown"
-"Nieznany"
-"Desconocido"
-"Neznámy"
-"Sconosciuto"
-"Не визначено"
-"Ня вызначана"
-upd:"Unknown"
+"не определено"
+"unknown"
+"neznámý"
+"unbekannt"
+upd:"unknown"
+"nieznany"
+"desconocido"
+"neznámy"
+"sconosciuto"
+"не визначено"
+"ня вызначана"
+upd:"unknown"
 
 MInfoPowerStatusBC
 "Статус заряда батареи"
@@ -13342,6 +13328,20 @@ upd:"High"
 "Високий"
 "Высокі"
 upd:"High"
+
+MInfoPowerStatusBCMedium
+"Средний"
+"Medium"
+"Střední"
+"Mittel"
+"Közepes"
+"Średni"
+"Medio"
+"Stredná"
+"Medio"
+"Середній"
+"Сярэдні"
+"Vidutinis"
 
 MInfoPowerStatusBCLow
 "Низкий"
@@ -13372,18 +13372,18 @@ upd:"Critical"
 upd:"Critical"
 
 MInfoPowerStatusBCCharging
-"Зарядка"
-"Charging"
-"Nabíjení"
-"Wird geladen"
-upd:"Charging"
-"Ładowanie"
-"Cargando"
-"Nabíjanie"
-"In Carica"
-"Заряджання"
-"Зарадка"
-upd:"Charging"
+"зарядка"
+"charging"
+"nabíjení"
+"wird geladen"
+upd:"charging"
+"ładowanie"
+"cargando"
+"nabíjanie"
+"in carica"
+"заряджання"
+"зарадка"
+upd:"charging"
 
 MInfoPowerStatusBCNoSysBat
 "Батареи нет"
