@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2023-12-23 21:23:54+00:00 - build 6235
+
+1. Fix issues with battery status in info panel.
+
+--------------------------------------------------------------------------------
 drkns 2023-12-23 13:59:59+00:00 - build 6234
 
 1. Fix RGB color processing.
